# fast-drone

./: .gitignore  CLAUDE.md  HANDOFF.md  SETUP.md  TODO.md  controller.py  ekf_comparison.py  ekf_sim.py  estimator.py  fallback_controller.py  gust_comparison.py  hybrid_comparison.py  mc_result.txt  mission_sim.py  monte_carlo.py  nmpc.py  nmpc_acados.py  requirements.txt  sensors.py  test_plant.py  trim.py  vehicle_params.py
legacy/: FILES.md  ekf_full_comparison.py  imu_sweep.py  launch_transition.py  monte_carlo.py  rotor.py  sweep.py  sweep_scheduled.py  takeoff_cruise.py
results/: FILES.md  MISSION_ANALYSIS.md  PROJECT_REPORT.md  decel_fix_result.txt  mission_result.txt  trim_sweep.txt
ros2_ws/src/fast_drone_ctrl/: package.xml  setup.cfg  setup.py
ros2_ws/src/fast_drone_ctrl/fast_drone_ctrl/: frame_utils.py  offboard_node.py  safety.py
ros2_ws/src/fast_drone_ctrl/fast_drone_ctrl/controllers/: controller.py  dynamics.py  hybrid_comparison.py  nmpc.py  trim.py
ros2_ws/src/fast_drone_ctrl/launch/: sitl_offboard.launch.py
scripts/: run_sitl.sh  setup_ubuntu.sh  sitl_run.sh  sync_controllers.sh
